# idl-compat

./: README.rst
rust/: .gitignore  Cargo.toml  README.md
rust/idl-compat/: Cargo.toml  README.md
rust/idl-compat-core/: Cargo.toml  README.md
rust/idl-compat-macro/: Cargo.toml  README.md
